--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
-</head>
-<body>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/favicon-32x32.png"
+		/>
+		<link rel="stylesheet" href="../styles/index.css" />
+		<script src="./index.js" defer></script>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
-
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
-
-  Explore
-
-</body>
+		<title>Frontend Mentor | Space tourism website</title>
+	</head>
+	<body>
+		<div class="navbar">
+			<ul>
+				<li>00 Home</li>
+				<li>01 Destination</li>
+				<li>02 Crew</li>
+				<li>03 Technology</li>
+			</ul>
+		</div>
+		<div class="container">
+			<div class="top">So, you want to travel to</div>
+			<div class="mid">Space</div>
+			<div class="bot">
+				Let’s face it; if you want to go to space, you might as well genuinely
+				go to outer space and not hover kind of on the edge of it. Well sit
+				back, and relax because we’ll give you a truly out of this world
+				experience! Explore
+			</div>
+		</div>
+	</body>
 </html>
