--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,13 +17,16 @@
 	</head>
 	<body>
 		<div class="navbar">
-			<ul>
-				<li>00 Home</li>
-				<li>01 Destination</li>
-				<li>02 Crew</li>
-				<li>03 Technology</li>
-			</ul>
+			<nav>
+				<ul>
+					<li><a href="#">00 Home</a></li>
+					<li><a href="#">01 Destination</a></li>
+					<li><a href="#">02 Crew</a></li>
+					<li><a href="#">03 Technology</a></li>
+				</ul>
+			</nav>
 		</div>
+		<div class="logo"></div>
 		<div class="container">
 			<div class="top">So, you want to travel to</div>
 			<div class="mid">Space</div>
