--- a/starter-code/technology-vehicle.html
+++ b/starter-code/technology-vehicle.html
@@ -15,11 +15,33 @@
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
 	<body>
-		00 Home 01 Destination 02 Crew 03 Technology 03 Space launch 101 1 2 3 The
-		terminology... Launch vehicle A launch vehicle or carrier rocket is a
-		rocket-propelled vehicle used to carry a payload from Earth's surface to
-		space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the
-		most powerful in operation. Standing 150 metres tall, it's quite an
-		awe-inspiring sight on the launch pad!
+		<div class="logo"></div>
+		<div class="navbar">
+			<nav>
+				<ul>
+					<li>
+						<a href="index.html"><span id="num">00 </span> Home</a>
+					</li>
+					<li>
+						<a href="destination-moon.html"
+							><span id="num">01 </span>Destination</a
+						>
+					</li>
+					<li>
+						<a href="crew-commander.html"><span id="num">02 </span> Crew</a>
+					</li>
+					<li>
+						<a href="technology-vehicle.html"
+							><span id="num">03 </span> Technology</a
+						>
+					</li>
+				</ul>
+			</nav>
+		</div>
+		03 Space launch 101 1 2 3 The terminology... Launch vehicle A launch vehicle
+		or carrier rocket is a rocket-propelled vehicle used to carry a payload from
+		Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X
+		carrier rocket is the most powerful in operation. Standing 150 metres tall,
+		it's quite an awe-inspiring sight on the launch pad!
 	</body>
 </html>
