added resets to css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -16,31 +16,35 @@
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
 	<body>
-		<div class="logo"></div>
-		<div class="navbar">
-			<nav>
-				<ul>
-					<li>
-						<a href="index.html"><span id="num">00 </span> Home</a>
-					</li>
-					<li>
-						<a href="destination-moon.html"
-							><span id="num">01 </span>Destination</a
-						>
-					</li>
-					<li>
-						<a href="crew-commander.html"><span id="num">02 </span> Crew</a>
-					</li>
-					<li>
-						<a href="technology-vehicle.html"
-							><span id="num">03 </span> Technology</a
-						>
-					</li>
-				</ul>
-			</nav>
-		</div>
-
 		<div class="container">
+			<div class="logo"></div>
+			<div class="navbar">
+				<nav>
+					<ul>
+						<li>
+							<a href="index.html" class="numberedtitles"
+								><span>00 </span> Home</a
+							>
+						</li>
+						<li>
+							<a href="destination-moon.html" class="numberedtitles"
+								><span id="num">01 </span>Destination</a
+							>
+						</li>
+						<li>
+							<a href="crew-commander.html" class="numberedtitles"
+								><span id="num">02 </span> Crew</a
+							>
+						</li>
+						<li>
+							<a href="technology-vehicle.html" class="numberedtitles"
+								><span id="num">03 </span> Technology</a
+							>
+						</li>
+					</ul>
+				</nav>
+			</div>
+
 			<div class="desc">
 				<div class="top">
 					<h3>So, you want to travel to</h3>
