--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -22,11 +22,11 @@
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
 	<body>
-		<div class="container">
-			<div class="logo"></div>
-			<div class="navbar">
+		<header>
+			<div class="primaryheader">
+				<div class="logo"></div>
 				<nav>
-					<ul>
+					<ul class="primarynavigation">
 						<li>
 							<a href="index.html" class="numberedtitles"
 								><span>00 </span> Home</a
@@ -50,26 +50,26 @@
 					</ul>
 				</nav>
 			</div>
+		</header>
 
-			<div class="desc">
-				<div class="top">
-					<h3>So, you want to travel to</h3>
-				</div>
-				<div class="mid">
-					<h1>Space</h1>
-				</div>
-				<div class="bot">
-					<p>
-						Let’s face it; if you want to go to space, you might as well
-						genuinely go to outer space and not hover kind of on the edge of it.
-						Well sit back, and relax because we’ll give you a truly out of this
-						world experience! Explore
-					</p>
-				</div>
+		<div class="desc">
+			<div class="top">
+				<h3>So, you want to travel to</h3>
 			</div>
-			<div class="explore">
-				<p>EXPLORE</p>
+			<div class="mid">
+				<h1>Space</h1>
 			</div>
+			<div class="bot">
+				<p>
+					Let’s face it; if you want to go to space, you might as well genuinely
+					go to outer space and not hover kind of on the edge of it. Well sit
+					back, and relax because we’ll give you a truly out of this world
+					experience! Explore
+				</p>
+			</div>
+		</div>
+		<div class="explore">
+			<p>EXPLORE</p>
 		</div>
 	</body>
 </html>
