--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,7 +6,19 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Barlow&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap"
 			rel="stylesheet"
 		/>
 
@@ -22,54 +34,60 @@
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
 	<body>
-		<header>
-			<div class="primaryheader">
-				<div class="logo"></div>
-				<nav>
-					<ul class="primarynavigation">
-						<li>
-							<a href="index.html" class="numberedtitles"
-								><span>00 </span> Home</a
-							>
-						</li>
-						<li>
-							<a href="destination-moon.html" class="numberedtitles"
-								><span id="num">01 </span>Destination</a
-							>
-						</li>
-						<li>
-							<a href="crew-commander.html" class="numberedtitles"
-								><span id="num">02 </span> Crew</a
-							>
-						</li>
-						<li>
-							<a href="technology-vehicle.html" class="numberedtitles"
-								><span id="num">03 </span> Technology</a
-							>
-						</li>
-					</ul>
-				</nav>
+		<header class="primary-header flex">
+			<div>
+				<img src="./assets/shared/logo.svg" alt="logo svg" class="logo" />
 			</div>
+			<nav>
+				<ul class="primarynavigation underline-indicators flex">
+					<li class="active">
+						<a
+							href="index.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>00 </span> Home</a
+						>
+					</li>
+					<li>
+						<a
+							href="destination-moon.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>01 </span>Destination</a
+						>
+					</li>
+					<li>
+						<a
+							href="crew-commander.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>02 </span> Crew</a
+						>
+					</li>
+					<li>
+						<a
+							href="technology-vehicle.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>03 </span> Technology</a
+						>
+					</li>
+				</ul>
+			</nav>
 		</header>
 
-		<div class="desc">
-			<div class="top">
-				<h3>So, you want to travel to</h3>
-			</div>
-			<div class="mid">
-				<h1>Space</h1>
-			</div>
-			<div class="bot">
-				<p>
-					Let’s face it; if you want to go to space, you might as well genuinely
-					go to outer space and not hover kind of on the edge of it. Well sit
-					back, and relax because we’ll give you a truly out of this world
-					experience! Explore
-				</p>
-			</div>
-		</div>
-		<div class="explore">
-			<p>EXPLORE</p>
+		<div class="container">
+			<h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
+				So, you want to travel to
+				<span class="fs-900 ff-serif text-white">Space</span>
+			</h1>
+			<p>
+				Let’s face it; if you want to go to space, you might as well genuinely
+				go to outer space and not hover kind of on the edge of it. Well sit
+				back, and relax because we’ll give you a truly out of this world
+				experience! Explore
+			</p>
+			<a
+				href="#"
+				class="largebutton uppercase ff-serif fs-600 text-dark bg-white"
+				>Explore</a
+			>
 		</div>
 	</body>
 </html>
