--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -44,28 +44,28 @@
 						<a
 							href="index.html"
 							class="ff-sans-cond uppercase text-white letter-spacing-2"
-							><span>00 </span> Home</a
+							><span>00</span> Home</a
 						>
 					</li>
 					<li>
 						<a
 							href="destination-moon.html"
 							class="ff-sans-cond uppercase text-white letter-spacing-2"
-							><span>01 </span>Destination</a
+							><span>01</span>Destination</a
 						>
 					</li>
 					<li>
 						<a
 							href="crew-commander.html"
 							class="ff-sans-cond uppercase text-white letter-spacing-2"
-							><span>02 </span> Crew</a
+							><span>02</span>Crew</a
 						>
 					</li>
 					<li>
 						<a
 							href="technology-vehicle.html"
 							class="ff-sans-cond uppercase text-white letter-spacing-2"
-							><span>03 </span> Technology</a
+							><span>03</span>Technology</a
 						>
 					</li>
 				</ul>
@@ -73,20 +73,25 @@
 		</header>
 
 		<div class="grid-container">
-			<h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
-				So, you want to travel to
-				<span class="fs-900 ff-serif text-white">Space</span>
-			</h1>
-			<p>
-				Let’s face it if you want to go to space, you might as well genuinely go
-				to outer space and not hover kind of on the edge of it. Well sit back,
-				and relax because we’ll give you a truly out of this world experience!
-			</p>
-			<a
-				href="#"
-				class="largebutton uppercase ff-serif fs-600 text-dark bg-white"
-				>Explore</a
-			>
+			<div>
+				<h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
+					So, you want to travel to
+					<span class="fs-900 ff-serif text-white">Space</span>
+				</h1>
+				<p>
+					Let’s face it; if you want to go to space, you might as well genuinely
+					go to outer space and not hover kind of on the edge of it. Well sit
+					back, and relax because we’ll give you a truly out of this world
+					experience!
+				</p>
+			</div>
+			<div>
+				<a
+					href="#"
+					class="largebutton uppercase ff-serif fs-600 text-dark bg-white"
+					>Explore</a
+				>
+			</div>
 		</div>
 	</body>
 </html>
