--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -38,6 +38,7 @@
 			<div>
 				<img src="./assets/shared/logo.svg" alt="logo svg" class="logo" />
 			</div>
+			<button><span class="sr-only">Menu</span></button>
 			<nav>
 				<ul class="primarynavigation underline-indicators flex">
 					<li class="active">
@@ -76,7 +77,7 @@
 			<div>
 				<h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
 					So, you want to travel to
-					<span class="fs-900 ff-serif text-white">Space</span>
+					<span class="d-block fs-900 ff-serif text-white">Space</span>
 				</h1>
 				<p>
 					Let’s face it; if you want to go to space, you might as well genuinely
@@ -86,9 +87,7 @@
 				</p>
 			</div>
 			<div>
-				<a
-					href="#"
-					class="largebutton uppercase ff-serif fs-600 text-dark bg-white"
+				<a href="#" class="largebutton uppercase ff-serif text-dark bg-white"
 					>Explore</a
 				>
 			</div>
