--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -80,7 +80,7 @@
 			</nav>
 		</header>
 
-		<div class="grid-container">
+		<main id="main" class="grid-container grid-container--home">
 			<div>
 				<h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
 					So, you want to travel to
@@ -94,10 +94,12 @@
 				</p>
 			</div>
 			<div>
-				<a href="#" class="largebutton uppercase ff-serif text-dark bg-white"
+				<a
+					href="destination-moon.html"
+					class="largebutton uppercase ff-serif text-dark bg-white"
 					>Explore</a
 				>
 			</div>
-		</div>
+		</main>
 	</body>
 </html>
