--- a/starter-code/technology-vehicle.html
+++ b/starter-code/technology-vehicle.html
@@ -15,29 +15,50 @@
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
 	<body>
-		<div class="logo"></div>
-		<div class="navbar">
+		<header class="primary-header flex">
+			<div>
+				<img src="./assets/shared/logo.svg" alt="logo svg" class="logo" />
+			</div>
+			<button class="mobile-toggler" aria-controls="primarynavigation">
+				<span class="sr-only" aria-expanded="false">Menu</span>
+			</button>
 			<nav>
-				<ul>
-					<li>
-						<a href="index.html"><span id="num">00 </span> Home</a>
-					</li>
-					<li>
-						<a href="destination-moon.html"
-							><span id="num">01 </span>Destination</a
+				<ul
+					data-visible="false"
+					id="primarynavigation"
+					class="primarynavigation underline-indicators flex"
+				>
+					<li class="active">
+						<a
+							href="index.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>00</span> Home</a
 						>
 					</li>
 					<li>
-						<a href="crew-commander.html"><span id="num">02 </span> Crew</a>
+						<a
+							href="destination-moon.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>01</span>Destination</a
+						>
 					</li>
 					<li>
-						<a href="technology-vehicle.html"
-							><span id="num">03 </span> Technology</a
+						<a
+							href="crew-commander.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>02</span>Crew</a
+						>
+					</li>
+					<li>
+						<a
+							href="technology-vehicle.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>03</span>Technology</a
 						>
 					</li>
 				</ul>
 			</nav>
-		</div>
+		</header>
 		03 Space launch 101 1 2 3 The terminology... Launch vehicle A launch vehicle
 		or carrier rocket is a rocket-propelled vehicle used to carry a payload from
 		Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X
