--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -14,6 +14,50 @@
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
 	<body>
+		<header class="primary-header flex">
+			<div>
+				<img src="./assets/shared/logo.svg" alt="logo svg" class="logo" />
+			</div>
+			<button class="mobile-toggler" aria-controls="primarynavigation">
+				<span class="sr-only" aria-expanded="false">Menu</span>
+			</button>
+			<nav>
+				<ul
+					data-visible="false"
+					id="primarynavigation"
+					class="primarynavigation underline-indicators flex"
+				>
+					<li class="active">
+						<a
+							href="index.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>00</span> Home</a
+						>
+					</li>
+					<li>
+						<a
+							href="destination-moon.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>01</span>Destination</a
+						>
+					</li>
+					<li>
+						<a
+							href="crew-commander.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>02</span>Crew</a
+						>
+					</li>
+					<li>
+						<a
+							href="technology-vehicle.html"
+							class="ff-sans-cond uppercase text-white letter-spacing-2"
+							><span>03</span>Technology</a
+						>
+					</li>
+				</ul>
+			</nav>
+		</header>
 		00 Home 01 Destination 02 Crew 03 Technology 02 Meet your crew Commander
 		Douglas Hurley Douglas Gerald Hurley is an American engineer, former Marine
 		Corps pilot and former NASA astronaut. He launched into space for the third
