--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -147,11 +147,11 @@
 				<div class="destination-meta flex">
 					<div>
 						<h3 class="text-accent fs-200 uppercase">Avg. distance</h3>
-						<p class="uppercase fs-500 ff-serif">384,400 km</p>
+						<p class="uppercase ff-serif">384,400 km</p>
 					</div>
 					<div>
 						<h3 class="text-accent fs-200 uppercase">Est. travel time</h3>
-						<p class="uppercase fs-500 ff-serif">3 days</p>
+						<p class="uppercase ff-serif">3 days</p>
 					</div>
 				</div>
 			</article>
