--- a/starter-code/technology-vehicle.html
+++ b/starter-code/technology-vehicle.html
@@ -3,6 +3,24 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Barlow&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap"
+			rel="stylesheet"
+		/>
 
 		<link
 			rel="icon"
@@ -11,10 +29,12 @@
 			href="./assets/favicon-32x32.png"
 		/>
 		<link rel="stylesheet" href="../styles/index.css" />
+		<script src="./styler.js" defer></script>
+		<script src="./index.js" defer></script>
 
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
-	<body>
+	<body class="home">
 		<header class="primary-header flex">
 			<div>
 				<img src="./assets/shared/logo.svg" alt="logo svg" class="logo" />
