--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -3,6 +3,24 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Barlow&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap"
+			rel="stylesheet"
+		/>
 
 		<link
 			rel="icon"
@@ -11,9 +29,12 @@
 			href="./assets/favicon-32x32.png"
 		/>
 		<link rel="stylesheet" href="../styles/index.css" />
+		<script src="./styler.js" defer></script>
+		<script src="./index.js" defer></script>
+
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
-	<body>
+	<body class="crew">
 		<header class="primary-header flex">
 			<div>
 				<img src="./assets/shared/logo.svg" alt="logo svg" class="logo" />
@@ -58,9 +79,45 @@
 				</ul>
 			</nav>
 		</header>
-		00 Home 01 Destination 02 Crew 03 Technology 02 Meet your crew Commander
-		Douglas Hurley Douglas Gerald Hurley is an American engineer, former Marine
-		Corps pilot and former NASA astronaut. He launched into space for the third
-		time as commander of Crew Dragon Demo-2.
+		<main id="main" class="grid-container grid-container--crew flow">
+			<h1 class="numberedtitles">
+				<span aria-hidden="true">02</span> Meet your crew
+			</h1>
+			<div class="dot-indicators flex">
+				<button aria-selected="true">
+					<span class="sr-only">The Commander</span>
+				</button>
+				<button aria-selected="false">
+					<span class="sr-only">Mission specialist</span>
+				</button>
+				<button aria-selected="false">
+					<span class="sr-only">The Pilot</span>
+				</button>
+				<button aria-selected="false">
+					<span class="sr-only">The crew Engineer</span>
+				</button>
+			</div>
+			<article class="crew-details flow">
+				<header class="flow flow--space-small">
+					<h2 class="fs-600 ff-serif uppercase">Commander</h2>
+					<p class="fs-700 uppercase ff-serif">Hurley Douglas</p>
+				</header>
+				<p>
+					Gerald Hurley is an American engineer, former Marine Corps pilot and
+					former NASA astronaut. He launched into space for the third time as
+					commander of Crew Dragon Demo-2.
+				</p>
+			</article>
+			<picture>
+				<source
+					srcset="../starter-code/assets/crew/image-douglas-hurley.webp"
+					type="image/webp"
+				/>
+				<img
+					src="../starter-code/assets/crew/image-douglas-hurley.png"
+					alt=""
+				/>
+			</picture>
+		</main>
 	</body>
 </html>
