--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -85,6 +85,10 @@
 				<span aria-hidden="true">01</span> Pick your destination
 			</h1>
 			<picture>
+				<source
+					srcset="../starter-code/assets/destination/image-moon.webp"
+					type="image/webp"
+				/>
 				<img
 					src="../starter-code/assets/destination/image-moon.png"
 					alt="the moon"
@@ -136,7 +140,7 @@
 					Titan
 				</button>
 			</div>
-			<article class="destination-info">
+			<article class="destination-info flow">
 				<h2 class="uppercase fs-800 ff-serif">Moon</h2>
 				<p>
 					See our planet as you’ve never seen it before. A perfect relaxing trip
