--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -100,7 +100,7 @@
 					aria-selected="true"
 					role="tab"
 					aria-controls="moon-tab"
-					class="active uppercase bg-dark ff-sans-cond text-accent letter-spacing-2"
+					class="uppercase bg-dark ff-sans-cond text-accent letter-spacing-2"
 					tabindex="0"
 					data-image="moon-image"
 				>
