--- a/starter-code/crew-commander.html
+++ b/starter-code/crew-commander.html
@@ -30,7 +30,7 @@
 		/>
 		<link rel="stylesheet" href="index.css" />
 		<script src="./styler.js" defer></script>
-		<script src="./index.js" defer></script>
+		<script src="./crew.js" defer></script>
 
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
@@ -83,40 +83,61 @@
 			<h1 class="numberedtitles">
 				<span aria-hidden="true">02</span> Meet your crew
 			</h1>
-			<div class="dot-indicators flex">
-				<button aria-selected="true">
+			<div class="dot-indicators flex" role="tablist" aria-label="crew list">
+				<button
+					aria-selected="true"
+					aria-controls="commander-tab"
+					data-image="commander-image"
+					tab-index="0"
+					role="tab"
+				>
 					<span class="sr-only">The Commander</span>
 				</button>
-				<button aria-selected="false">
+				<button
+					aria-selected="false"
+					aria-controls="mission-tab"
+					data-image="mission-image"
+					tab-index="-1"
+					role="tab"
+				>
 					<span class="sr-only">Mission specialist</span>
 				</button>
-				<button aria-selected="false">
+				<button
+					aria-selected="false"
+					aria-controls="pilot-tab"
+					data-image="pilot-image"
+					tab-index="-1"
+					role="tab"
+				>
 					<span class="sr-only">The Pilot</span>
 				</button>
-				<button aria-selected="false">
+				<button
+					aria-selected="false"
+					aria-controls="engineer-tab"
+					data-image="engineer-image"
+					tab-index="-1"
+					role="tab"
+				>
 					<span class="sr-only">The crew Engineer</span>
 				</button>
 			</div>
-			<article class="crew-details flow">
+			<article class="crew-details flow" id="commander-tab" tabindex="0">
 				<header class="flow flow--space-small">
 					<h2 class="fs-600 ff-serif uppercase">Commander</h2>
-					<p class="fs-700 uppercase ff-serif">Hurley Douglas</p>
+					<p class="fs-700 uppercase ff-serif">DOUGLAS HURLEY</p>
 				</header>
 				<p>
-					Gerald Hurley is an American engineer, former Marine Corps pilot and
-					former NASA astronaut. He launched into space for the third time as
-					commander of Crew Dragon Demo-2.
+					Douglas Gerald Hurley is an American engineer, former Marine Corps
+					pilot and former NASA astronaut. He launched into space for the third
+					time as commander of Crew Dragon Demo-2.
 				</p>
 			</article>
-			<picture>
+			<picture id="commander-image">
 				<source
-					srcset="../starter-code/assets/crew/image-douglas-hurley.webp"
+					srcset="./assets/crew/image-douglas-hurley.webp"
 					type="image/webp"
 				/>
-				<img
-					src="../starter-code/assets/crew/image-douglas-hurley.png"
-					alt=""
-				/>
+				<img src="./assets/crew/image-douglas-hurley.png" alt="Douglas" />
 			</picture>
 		</main>
 	</body>
