--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -28,7 +28,7 @@
 			sizes="32x32"
 			href="./assets/favicon-32x32.png"
 		/>
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="./index.css" />
 		<script src="./styler.js" defer></script>
 		<script src="./index.js" defer></script>
 
