--- a/starter-code/destination-moon.html
+++ b/starter-code/destination-moon.html
@@ -94,7 +94,7 @@
 			<div
 				class="tab-list underline-indicators flex"
 				role="tablist"
-				aria-label="destination list"
+				aria-label="destination-list"
 			>
 				<button
 					aria-selected="true"
