--- a/starter-code/technology-vehicle.html
+++ b/starter-code/technology-vehicle.html
@@ -30,7 +30,7 @@
 		/>
 		<link rel="stylesheet" href="index.css" />
 		<script src="./styler.js" defer></script>
-		<script src="./index.js" defer></script>
+		<script src="./technology.js" defer></script>
 
 		<title>Frontend Mentor | Space tourism website</title>
 	</head>
@@ -86,48 +86,53 @@
 			</h1>
 			<picture>
 				<img
-					src="../starter-code/assets/technology/image-launch-vehicle-portrait.jpg"
+					src="./assets/technology/image-launch-vehicle-portrait.jpg"
 					alt="Launch"
 				/>
 			</picture>
-			<div class="number-indicators flex">
+			<div
+				class="number-indicators flex"
+				role="tablist"
+				aria-label="technology-list"
+			>
 				<button
 					aria-selected="true"
 					role="tab"
-					aria-controls="moon-tab"
+					aria-controls="1"
 					class="uppercase bg-dark ff-serif text-white"
 					tabindex="0"
+					data-image="no-1"
 				>
 					1
 				</button>
 				<button
 					aria-selected="false"
 					role="tab"
-					aria-controls="moon-tab"
+					aria-controls="2"
 					class="uppercase bg-dark ff-serif text-white"
 					tabindex="-1"
+					data-image="no-2"
 				>
 					2
 				</button>
 				<button
 					aria-selected="false"
 					role="tab"
-					aria-controls="moon-tab"
+					aria-controls="3"
 					class="uppercase bg-dark ff-serif text-white"
 					tabindex="-1"
+					data-image="no-3"
 				>
 					3
 				</button>
 			</div>
 			<article class="technology-info flow">
 				<header class="flow flow--space-small">
-					<h1
-						class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1"
-					>
+					<p class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
 						The terminology...
-						<span class="d-block uppercase text-white fs-600 ff-serif"
-							>Launch vehicle</span
-						>
+					</p>
+					<h1 class="d-block uppercase text-white fs-600 ff-serif">
+						Launch vehicle
 					</h1>
 				</header>
 				<p>
