--- a/destination-moon.html
+++ b/destination-moon.html
@@ -138,7 +138,7 @@
 				</button>
 			</div>
 			<article class="destination-info flow">
-				<h2 class="uppercase fs-800 ff-serif">Moon</h2>
+				<h2 class="uppercase fs-800 ff-serif" style="font-weight: 700">Moon</h2>
 				<p id="change">
 					See our planet as you’ve never seen it before. A perfect relaxing trip
 					away to help regain perspective and come back refreshed. While you’re
